--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Adding config.py file.
 config.py
+# Adding files to gitignore
+API_practice.ipynb
+random_numbers.ipynb
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
